Fix overflow.

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,3 +1,32 @@
+@supports (scrollbar-color: auto) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--pink) transparent;
+  }
+}
+
+@supports selector(::-webkit-scrollbar) {
+  ::-webkit-scrollbar {
+    background: var(--pink);
+    height: 7px;
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-corner {
+    background: var(--pink);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: var(--pink);
+    border-radius: 2px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--pink) !important;
+    border-radius: 2px;
+  }
+}
+
 * {
   box-sizing: border-box;
   line-height: 1;
@@ -37,6 +66,7 @@ input {
 .container {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: max-content auto;
@@ -55,16 +85,7 @@ input {
   grid-area: main;
   padding: 1rem 2rem;
   overflow-x: auto;
+  overflow-y: hidden;
   position: relative;
   z-index: 1;
-}
-
-.laser {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  pointer-events: none;
 }
