--- a/src/components/column.module.css
+++ b/src/components/column.module.css
@@ -10,6 +10,7 @@
   align-items: baseline;
   gap: 0.5rem;
   max-width: 100%;
+  flex: none;
 }
 
 .columnTitle {
@@ -38,14 +39,31 @@
 }
 
 .columnList {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 0;
   margin: 0;
   background: linear-gradient(to bottom, var(--purple), var(--dark-purple));
-  height: 100%;
+  min-height: calc(100% - 2rem);
   box-shadow: inset 0 0 0.75rem rgba(0, 0, 0, 0.25),
     inset 0 0 2rem rgba(0, 0, 0, 0.15), inset 0 0 0.25rem rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem 1.5rem 0.5rem 1.5rem;
+  overflow: hidden;
+  max-height: calc(100% - 2rem);
+}
+
+.editorContainer {
+  padding: 0 1rem;
+  flex: none;
+}
+
+.scrollContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 1rem;
+  overflow-y: auto;
+  flex: auto;
 }
