--- a/src/components/retroItem.module.css
+++ b/src/components/retroItem.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  flex: none;
 }
 
 .item pre {
@@ -18,6 +19,8 @@
   font-size: inherit;
   padding: 0;
   margin: 0;
+  word-break: normal;
+  white-space: pre-wrap;
 }
 
 .actionsContainer {
